[gd_scene load_steps=5 format=3 uid="uid://diqbutm2ry0bg"]

[ext_resource type="Script" uid="uid://cwkw7fpda3pkb" path="res://Scripts/quest_menu.gd" id="1_3tl8b"]
[ext_resource type="FontFile" uid="uid://dwlaoeqs2oqod" path="res://Font/8-BIT_WONDER.TTF" id="1_lolt6"]
[ext_resource type="FontFile" uid="uid://dbym6lblkox6c" path="res://Font/Inter-Medium.ttf" id="2_ce80x"]

[sub_resource type="FontVariation" id="FontVariation_ookii"]
base_font = ExtResource("2_ce80x")

[node name="QuestMenu" type="Control"]
visible = false
z_index = 1000
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3tl8b")

[node name="TextureRect" type="ColorRect" parent="."]
visible = false
self_modulate = Color(1, 1, 1, 0.294118)
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1072.0
color = Color(0, 0, 0, 0.784314)

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 0.588235)

[node name="Titre" type="Label" parent="."]
custom_minimum_size = Vector2(2.08165e-12, 40)
layout_mode = 0
offset_top = 64.0
offset_right = 1920.0
offset_bottom = 128.0
theme_override_colors/font_outline_color = Color(0.568627, 0, 0.760784, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("1_lolt6")
theme_override_font_sizes/font_size = 32
text = "QUESTS_LIST"
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuestInfos2" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 898.0
offset_top = 200.0
offset_right = 1834.0
offset_bottom = 1024.0
rotation = -0.0349066
color = Color(0.619608, 0.615686, 0.435294, 1)

[node name="QuestInfos" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 920.0
offset_top = 192.0
offset_right = 1856.0
offset_bottom = 1016.0
color = Color(1, 1, 0.847059, 1)

[node name="TitreQuete" type="Label" parent="QuestInfos"]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 760.0
offset_bottom = 51.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 64
text = "TEXT_NO_QUEST_SELECTED"
clip_text = true
text_overrun_behavior = 4

[node name="DescriptionQuete" type="RichTextLabel" parent="QuestInfos"]
layout_mode = 0
offset_left = 32.0
offset_top = 104.0
offset_right = 736.0
offset_bottom = 824.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = SubResource("FontVariation_ookii")
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "TEXT_NO_QUEST_SELECTED"

[node name="CheckButton" type="CheckButton" parent="QuestInfos"]
visible = false
layout_mode = 0
offset_left = 488.0
offset_top = 64.0
offset_right = 752.0
offset_bottom = 88.0
focus_mode = 0
theme_override_colors/font_pressed_color = Color(1, 1, 0, 1)
button_pressed = true
text = "SUIVRE LA QUETE"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 192.0
offset_right = 944.0
offset_bottom = 1016.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
